--- a/ui/src/fonts.css
+++ b/ui/src/fonts.css
@@ -12,4 +12,11 @@
   font-weight: 700;
   font-style: normal;
   font-display: block;
+}
+
+* {
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: none;
+  text-rendering: geometricPrecision;
+  font-smooth: never;
 } 
