--- a/ui/src/fonts.css
+++ b/ui/src/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Pixelify Sans';
-  src: url('/src/fonts/PixelifySans-Regular.ttf') format('truetype');
+  src: url('/src/fonts/PIXY.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: block;
@@ -8,8 +8,8 @@
 
 @font-face {
   font-family: 'Pixelify Sans';
-  src: url('/src/fonts/PixelifySans-Bold.ttf') format('truetype');
-  font-weight: 700;
+  src: url('/src/fonts/PIXY.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
   font-display: block;
 }
