--- a/ui/src/fonts.css
+++ b/ui/src/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Pixelify Sans';
-  src: url('/src/fonts/PIXY.ttf') format('truetype');
+  src: url('/src/fonts/dogicapixel.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: block;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Pixelify Sans';
-  src: url('/src/fonts/PIXY.ttf') format('truetype');
+  src: url('/src/fonts/dogicapixel.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: block;
@@ -19,4 +19,5 @@
   -moz-osx-font-smoothing: none;
   text-rendering: geometricPrecision;
   font-smooth: never;
+  letter-spacing: 0px;
 } 
